# cpp_building_low_latency_applications

./: CMakeLists.txt  Docker_commands.md  Dockerfile  README.md
part_one/: CMakeLists.txt
part_one/building_the_cpp_building_blocks_for_low_latency_applications/: CMakeLists.txt  lf_queue.hpp  lf_queue_example.cpp  libcommon.cpp  libcommon.hpp  logging.hpp  logging_example.cpp  macros.hpp  mcast_socket.cpp  mcast_socket.hpp  mem_pool.hpp  mem_pool_example.cpp  socket_example.cpp  socket_utils.hpp  tcp_server.cpp  tcp_server.hpp  tcp_socket.cpp  tcp_socket.hpp  thread_example.cpp  thread_utils.hpp  time_utils.hpp
part_one/designing_some_common_low_latency_applications_in_cpp/: CMakeLists.txt
part_one/exploring_cpp_concepts_from_a_low_latency_applications_perspective/: CMakeLists.txt  alignment.cpp  branch.cpp  crtp.cpp  induction.cpp  loop_invariant.cpp  loop_unroll.cpp  order.cpp  pointer_alias.cpp  rvo.cpp  strength.cpp  strict_alias.cpp  tail_call.cpp  vector.cpp
part_one/introducing_low_latency_application_development_in_cpp/: CMakeLists.txt
part_two/: CMakeLists.txt
part_two/building_the_cpp_matching_engine/: CMakeLists.txt
part_two/building_the_cpp_matching_engine/exchange/: CMakeLists.txt  exchange_main.cpp
part_two/building_the_cpp_matching_engine/exchange/market_data/: market_update.hpp
part_two/building_the_cpp_matching_engine/exchange/matcher/: matching_engine.cpp  matching_engine.hpp  me_order.cpp  me_order.hpp  me_order_book.cpp  me_order_book.hpp
part_two/building_the_cpp_matching_engine/exchange/order_server/: client_request.hpp  client_response.hpp
part_two/designing_our_trading_ecosystem/: CMakeLists.txt
(+9 files in other folders)
