project(exploring_cpp_concepts_from_a_low_latency_applications_perspective)

add_executable(pointer_alias pointer_alias.cpp)
add_executable(loop_unroll loop_unroll.cpp)
add_executable(rvo rvo.cpp)
add_executable(alignment alignment.cpp)
add_executable(branch branch.cpp)
add_executable(composition composition.cpp)
add_executable(crtp crtp.cpp)
add_executable(induction induction.cpp)
add_executable(loop_invariant loop_invariant.cpp)
add_executable(strength strength.cpp)
add_executable(strict_alias strict_alias.cpp)
add_executable(tail_call tail_call.cpp)
add_executable(vector vector.cpp)